fix: ensure consistent spacing in translation links

--- a/content/_sass/_custom.scss
+++ b/content/_sass/_custom.scss
@@ -72,10 +72,6 @@ ul.pager {
   color: #555;
   white-space: nowrap;
 
-  .current-locale {
-    font-weight: 800;
-  }
-
   a {
     color: #555;
     text-decoration: none;
